new/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  labels:
    app: jenkins-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-deployment
  template:
    metadata:
      labels:
        app: jenkins-deployment
    spec:
      containers:
        - name: jenkins-master
          image: jenkins:lts
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
      volumes:
      - name: jenkins-home
        emptyDir: {}
