new/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins-deployment
  name: jenkins-service
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: jnlp
      port: 50000
      targetPort: 50000
  selector:
    app: jenkins-deployment
  type: ClusterIP
